# telco-churn-analytics

./: .dockerignore  .gitignore  .gitignore-pytemplate  ANALYST_PORTFOLIO.md  BUSINESS_ANALYSIS.md  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  TODO.md  docker-compose.yml  pyproject.toml  pyrightconfig.json  requirements.txt
.github/: FUNDING.yml
.github/workflows/: ci.yml
archive/notebooks/: customer_churn.ipynb
docs/: business_summary.md  changelog.md  choosing_statistics.md  contributing.md  data_dictionary.md  data_loading.md  data_schema.md  data_source.md  executive_walkthrough.md  file_index.md  findings.md  fixes_summary.md  interview_walkthrough.md  methodology.md  model_evaluation.md  project_build_order.md  setup.md  troubleshooting_guide.md  usage.md
models/: model_comparison_results.csv
notebooks/: 01_eda.ipynb  02_preprocessing.ipynb  03_feature_engineering.ipynb  03_modeling.ipynb  04_modeling.ipynb  04_results.ipynb  05_results.ipynb
notes/: BEGINNER_GUIDE.md  README.md  data_quality_guide.md  dataset-intention.md  debugging_log.md  error_handling_guide.md  interview_data_quality_guide.md  technical_implementation_guide.md
notes/data/processed/: test.parquet
scripts/: analyze_class_balance.py  interactive_threshold.py  run_pipeline.py  sql_analysis.py  threshold_analysis.py
sql/: churn_analysis.sql
src/: __init__.py  api.py  config.py  predict.py  preprocess.py  run_pipeline.py  train.py  utils.py
tests/: test_api.py  test_integration.py  test_predict.py  test_preprocess.py
tests/fixtures/: sample_customers.csv
