[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "telco-churn-analytics"
version = "0.1.0"
description = "Machine learning project for predicting customer churn in telecommunications"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "cat-cols"}
]
dependencies = [
    "pandas>=2.0,<4",
    "numpy>=1.24,<3",
    "scikit-learn==1.9.0",
    "pyarrow>=14,<25",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
    "shap>=0.44.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
    "openpyxl",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "ipywidgets>=8.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "flake8>=6.0.0",
    "black>=24.0.0",
    "bandit>=1.7.0"
]
advanced = [
    "xgboost>=1.5.0",
    "lightgbm>=3.2.0"
]
imbalance = [
    "imbalanced-learn>=0.10.0"
]
interactive = [
    "plotly>=5.0.0"
]
sql = [
    "duckdb>=0.10.0"
]
pipeline = [
    "papermill>=2.4.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "build",
    "dist",
    "*.egg-info"
]

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
skips = ["B101", "B601"]
